<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="290dp"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/masterIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_wifi_tethering"
                android:hint="@string/master_ip"
                android:inputType="text"
                android:text="@string/base_master_ip" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="137dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_account_circle"
                    android:hint="@string/user_id"
                    android:inputType="number"
                    android:text="@string/base_user_id" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="137dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp">

                <EditText
                    android:id="@+id/numberOfPois"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:drawableStart="@drawable/ic_playlist_play"
                    android:hint="@string/number_of_pois"
                    android:inputType="number"
                    android:text="@string/base_number_of_pois" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/searchUserButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/button_background"
            android:text="@string/search"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:id="@+id/progressBarLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:indeterminateDrawable="@drawable/multi_color_progress_bar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:text="@string/please_wait"
                android:textColor="#FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>